--- a/currencyConvertor.css
+++ b/currencyConvertor.css
@@ -1,3 +1,8 @@
+/* 
+NOTE:
+Currency API used in this project is not working currently.
+If someone knows a working free API, please recommend.
+*/
 *{
     margin: 0;
     padding: 0;
